# linduarte.github.io

./: .env.example  .git-commit-workflow.ps1  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DIST_REGENERATE.md  LAUNCH_READINESS.md  MONITORING_INSTRUCTIONS.md  Makefile  README-image-generation.md  README-resize.md  README.md  README_BUILD.md  _redirects  app.html  container.txt  curse-prog.md  index.html  landing.html  landing.html.modified-backup.html  main.py  mobile_friendly.txt  netlify.toml  notes.md  pa11y-ci.config.json  package-lock.json  package.json  playwright.config.py  pr-body.txt  pr_body.md  pr_body_full.md  pyproject.toml  teste.txt
app/: .htmlvalidate.json
certs/: localhost-key.pem  localhost.pem
cloudflare/: README.md  worker-refresh.js
css/: common-styles.css  style.css  styles.css
docs/: PR_SUMMARY.md
linduarte_github_io.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
netlify/: README.md  local-server.js  test-refresh.js
reports/: audit-comment-3423435919.md  landing-lighthouse.report.html  landing-lighthouse.report.json  landing-pa11y.html  lighthouse-prefacio.report.html  lighthouse-prefacio.report.json  lighthouse-summary.json  login-lighthouse.report.html  login-lighthouse.report.json  login-pa11y.html  prefacio-lighthouse.report.html  prefacio-lighthouse.report.json  prefacio-pa11y.html
reports_download/: audit-summary.md  landing-lighthouse.cleaned.report.json  landing-lighthouse.local.report.json  landing-lighthouse.report.json  landing-pa11y.html  login-lighthouse.cleaned.report.json  login-lighthouse.report.json  prefacio-lighthouse.cleaned.report.json  prefacio-lighthouse.report.json  prefacio-lighthouse.rerun.report.json  prefacio-pa11y.html
reports_download_ci/: landing-lighthouse.report.json  login-lighthouse.report.json  prefacio-lighthouse.report.json
reports_download_ci_latest/: landing-lighthouse.report.json  landing-pa11y.err  (+4 more)
(+164 files in other folders)
