[project]
name = "linduarte-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.1.0",
    "playwright>=1.44.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
]

[project.optional-dependencies]
e2e = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "pytest-html>=4.0.0",
    "playwright>=1.44.0"
]

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests",
    "visual: visual regression tests",
    "accessibility: accessibility tests"
]
