[project]
name = "linduarte-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.1.0",
    "playwright>=1.44.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
]

[project.optional-dependencies]
e2e = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "pytest-html>=4.0.0",
    "playwright>=1.44.0"
]

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
testpaths = ["tests"]
norecursedirs = ["tests/artifacts"]
markers = [
    "e2e: end-to-end tests",
    "visual: visual regression tests",
    "accessibility: accessibility tests"
]

[tool.setuptools.packages.find]
# Restrict package discovery so setuptools won't attempt to build a wheel
# that mistakenly includes unrelated top-level directories. This keeps the
# repository layout flat but tells setuptools to only consider packages that
# start with `app` (adjust if your package modules live elsewhere).
where = ["."]
include = ["app*"]
exclude = ["certs*", "reports*", "netlify*", "cloudflare*"]
